--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>telcon-api</name>
 	<description>Telcon REST API</description>
-
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 	<dependencies>
 
 	</dependencies>
